<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_index"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".activity.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_module_top_margin"
        android:background="@drawable/bg_rounded_white"
        android:elevation="@dimen/login_module_elevation"
        android:padding="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/et_port"
            style="@style/EditTextStyle"
            android:layout_width="86dp"
            android:layout_height="@dimen/textview_height"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_edittext"
            android:hint="@string/port_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_ip"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:layout_marginRight="@dimen/components_low_margin"
            android:layout_toLeftOf="@id/et_port"
            android:background="@drawable/bg_edittext"
            android:hint="@string/ip_hint" />

        <EditText
            android:id="@+id/et_username"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:layout_below="@id/et_port"
            android:layout_marginTop="@dimen/components_low_margin"
            android:background="@drawable/bg_edittext"
            android:hint="@string/username_hint" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            android:layout_below="@id/et_username"
            android:layout_marginTop="@dimen/components_low_margin"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginTop="@dimen/components_normal_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_login"
                style="@style/ButtonTextStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/bg_login_button"
                android:text="@string/log_in_button" />

            <Button
                android:id="@+id/bt_reset"
                style="@style/ButtonTextStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/components_normal_margin"
                android:layout_weight="1"
                android:background="@drawable/bg_reset_button"
                android:text="@string/reset_button" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
